--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "safe-rest",
   "version": "0.0.0",
-  "private": true,
+  "repository": "https://github.com/sdurbin1/safe-rest",
   "scripts": {
     "start": "node ./bin/www",
     "db-fill": "mongorestore ./data/latest/safe/"
   },
   "dependencies": {
+    "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
