--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "safe-rest",
   "version": "0.0.0",
-  "private": true,
+  "repository": "https://github.com/sdurbin1/safe-rest",
+  "license": "MIT",
   "scripts": {
     "start": "node ./bin/www",
     "db-fill": "mongorestore ./data/latest/safe/"
