--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "license": "MIT",
   "scripts": {
     "start": "node ./bin/www",
-    "db-fill": "mongorestore ./data/latest/safe/"
+    "db-fill": "mongorestore ./data/latest/safe/",
+    "lint": "eslint --ext .js routes/ models/ utils/ ./*.js"
+  },
+  "devDependencies": {
+    "babel-eslint": "6.0.2",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-dev-warning": "^0.1.0",
+    "eslint": "^2.7.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-standard": "^1.3.2"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
