--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
+    "connect-mongo": "1.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
+    "express-session": "1.13.0",
     "mongodb": "^2.1.11",
     "mongoose": "^4.4.7",
     "morgan": "~1.6.1",
