--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "safe-rest",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "repository": "https://github.com/sdurbin1/safe-rest",
   "license": "MIT",
   "scripts": {
@@ -21,6 +21,7 @@
   "dependencies": {
     "bluebird": "^3.3.4",
     "body-parser": "~1.13.2",
+    "compression": "^1.6.2",
     "connect-mongo": "1.1.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
