--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "db-fill": "mongorestore ./data/latest/safe/ --db safe",
-    "lint": "eslint --ext .js routes/ models/ utils/ ./*.js"
+    "lint": "eslint --ext .js routes/ models/ utils/ test/ ./*.js"
   },
   "devDependencies": {
     "babel-eslint": "6.0.2",
@@ -16,7 +16,9 @@
     "eslint": "^2.7.0",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-standard": "^1.3.2"
+    "eslint-plugin-standard": "^1.3.2",
+    "mocha": "^2.5.2",
+    "supertest": "^1.2.0"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
