--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-standard": "^1.3.2",
     "mocha": "^2.5.2",
-    "supertest": "^1.2.0",
-    "supertest-session": "^2.0.1"
+    "supertest": "^1.2.0"
   },
   "dependencies": {
     "bluebird": "^3.3.4",
